[project]
name = "benchmarking-six-python-optimization-frameworks-in-a-head-to"
version = "0.1.0"
description = "Companion code for Medium article: benchmarking six python optimization frameworks in a head to head performance test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "cvxpy>=1.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pulp>=2.9.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
